addons/account/static/src/scss/account_searchpanel.scss
.o_search_panel.account_root {
    padding: 6px !important; // need to override bootstrap ps-4 rule
    scrollbar-width: thin;
    .o_search_panel_section_header {
        display: none;
    }
    .list-group-item span.o_search_panel_label_title {
        display: contents;
    }
    .o_search_panel_category_value {
        padding-right: 0 !important;
        header {
            margin-left: 0;
        }
        .o_toggle_fold:empty{
            width: 0;
        }
        .o_search_panel_category_value {
            padding-left: 1.2rem !important; // need to override bootstrap ps-4 rule
            .o_toggle_fold {
                width: 0.3rem;
            }
        }
    }
    &::-webkit-scrollbar {
        width: 4px;
    }
    &::-webkit-scrollbar-thumb {
        background: lightgray;
    }
}

